--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,3 +11,15 @@ header {
 a {
   color: #00B7FF;
 }
+
+header.page-header h1 {
+    margin-top: 5px;
+}
+
+header.page-header .breadcrumb {
+    margin-bottom: 5px;
+}
+
+header.page-header a.btn-primary {
+    float: right;
+}
