--- a/views/noteedit.ejs
+++ b/views/noteedit.ejs
@@ -29,8 +29,7 @@
             </div>
 
             <div class="form-group">
-<textarea class="form-control" name='body' rows="5">
-          <%= note ? note.body : "" %></textarea>
+                <textarea class="form-control" name='body' rows="5"><%= note ? note.body : "" %></textarea>
             </div>
 
             <button type="submit" class="btn btn-default">Submit</button>
