--- a/views/notedestroy.ejs
+++ b/views/notedestroy.ejs
@@ -5,6 +5,8 @@
 </head>
 <body>
 <% include pageHeader %>
+
+<% if (user) { %>
 <form method='POST' action='/notes/destroy/confirm'>
     <input type='hidden' name='notekey' value='<%=
     note ? notekey : "" %>'>
@@ -12,6 +14,8 @@
     <br/>
     <input type='submit' value='DELETE' /> <a href="/notes/view?key=<%= notekey %>">Cancel</a>
 </form>
+<% } else { %><% include not-logged-in %><% } %>
+
 <% include footer %>
 </body>
 </html>
