--- a/views/noteedit.ejs
+++ b/views/noteedit.ejs
@@ -5,8 +5,10 @@
 </head>
 <body>
 <% include pageHeader %>
+
 <div class="row">
     <div class="col-xs-12">
+        <% if (user) { %>
         <form method='POST' action='/notes/save'>
             <input type='hidden' name='docreate' value='<%= docreate ? "create" : "update" %>'>
 
@@ -35,6 +37,7 @@
             <button type="submit" class="btn btn-default">Submit</button>
 
         </form>
+        <% } else { %><% include not-logged-in %><% } %>
     </div>
 </div>
 <% include footer %>
