--- a/views/pageHeader.ejs
+++ b/views/pageHeader.ejs
@@ -9,6 +9,7 @@
         Log Out <span class="badge"><%= user.username %></span></a>
     <% } else { %>
     <a class="btn btn-primary" href="/users/login">Log in</a>
+    <a class="btn btn-primary" href="/users/auth/twitter"><img width="15px" src="/images/twitter-brand-logos/TwitterLogo_white.png"/>Log in with Twitter</a>
     <% } %>
 
     <% if (typeof breadcrumbs !== 'undefined' && breadcrumbs) { %>
