--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     <% if (notelist.length > 0) { %>
     <div class="row">
         <div class="col-xs-12">
-            <div class="btn-group-vertical" role="group" style="width: 100%;">
+            <div class="btn-group-vertical" role="group" style="width: 100%;" id="notetitles">
                 <%
                 for (var note of notelist) {
                 %>
@@ -24,6 +24,23 @@
         </div>
     </div>
     <% include footer %>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        $(document).ready(function () {
+            var socket = io('/home');
+            socket.on('notetitles', function(data) {
+                var notelist = data.notelist;
+                $('#notetitles').empty();
+                for (var i = 0; i < notelist.length; i++) {
+                    notedata = notelist[i];
+                    $('#notetitles')
+                        .append('<a class="btn btn-lg btn-block btn-default" href="/notes/view?key='+
+                            notedata.key +'">'+ notedata.title +'</a>');
+                }
+            });
+        });
+    </script>
 </div>
 </body>
 </html>
