--- a/views/noteview.ejs
+++ b/views/noteview.ejs
@@ -6,12 +6,12 @@
     <% include pageHeader %>
 
     <div class="row"><div class="col-xs-12">
-            <h3><%= note ? note.title : "" %></h3>
-            <p><%= note ? note.body : "" %></p>
-            <p>Key: <%= notekey %></p>
+            <h3 id="notetitle"><%= note ? note.title : "" %></h3>
+            <p id="notebody"><%= note ? note.body : "" %></p>
+            <p>Key: <span id="notekey"><%= notekey %></span></p>
         </div></div>
 
-    <% if (notekey) { %>
+    <% if (notekey && user) { %>
     <div class="row">
         <div class="btn-group col-sm-12">
             <a class="btn btn-default" href="/notes/destroy?key=<%= notekey %>" role="button">Delete</a>
@@ -21,6 +21,27 @@
     <% } %>
 
     <% include footer %>
+
+    <% if (notekey) { %>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        $(document).ready(function () {
+            io('/view').on('noteupdate', function(note) {
+                if (note.key === "<%= notekey %>") {
+                    $('h3#notetitle').empty();
+                    $('h3#notetitle').text(note.title);
+                    $('p#notebody').empty();
+                    $('p#notebody').text(note.body);
+                }
+            });
+            io('/view').on('notedestroy', function(data) {
+                if (data.key === "<%= notekey %>") {
+                    window.location.href = "/";
+                }
+            });
+        });
+    </script>
+    <% } %>
 </div>
 </body>
 </html>
